--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Geometry-Guided Self-Supervised Learning for Category-Level Object Pose Estimation in Robotic Grasping.">
+        content="Test-time Model Adaptation for Robotic Grasping with Weakly Supervised Affordance Grounding">
   <meta name="keywords" content="Pose estimation">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Geometry-Guided Self-Supervised Learning for Category-Level Object Pose Estimation in Robotic Grasping</title>
+  <title>Test-time Model Adaptation for Robotic Grasping with Weakly Supervised Affordance Grounding</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
