--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   <div class="column is-four-fifths">
     <h2 class="title is-3">Video</h2>
     <div class="publication-video">
-      <video width="1080" height="720" controls muted playsinline preload="auto" style="max-width: 100%; border: none;">
+      <video width="1080" height="720" controls muted autoplay playsinline preload="auto" style="max-width: 100%; border: none;">
         <!-- 替换 src 为你的本地视频路径（相对路径或绝对路径均可） -->
         <source src="./static/videos/my.mp4" type="video/mp4">
       </video>
